Lab done. Needs optional step(s).

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 </div>
             </div>
 
+            <a href="https://github.com/zcamara/lab8">GitHub Repo</a>
         </div> <!-- .container -->
 
         <div class="templates">
